# deformation-resistance-defect-detection-algorithm

./: CMakeLists.txt  Macro.h  README.md  adaptive_threshold.cpp  clustering.cpp  fuzzy_matching.cpp  jl.py  main.cpp  miscellaneous.cpp
deform/: 新建 文本文档.txt
